# globe

./: IMPLEMENTATION_SUMMARY.md  NAPOLEON_TIME_TILES_IMPLEMENTATION.md  NAPOLEON_TRAJECTORY_FIX.md  SUMMARY.md  TEST_RESULTS.md  TIMELINE_UNIFICATION.md  TIME_PARAMETER_UPDATE.md  UNIFICATION_COMPLETE.md  prompts.md
.kiro/specs/vector-globe-viewer/: .config.kiro  design.md  requirements.md  tasks.md
backend/: Cargo.toml
backend/data/coastlines/: 0Ma.json  100Ma.json  150Ma.json  200Ma.json  250Ma.json  300Ma.json  50Ma.json
backend/src/: main.rs  schema.rs  seed.rs
backend/src/entities/: layer_groups.rs  layers.rs  mod.rs  object_references.rs  objects.rs  tiles.rs
backend/src/routes/: mod.rs
backend/src/services/: layer_service.rs  mod.rs  simplification.rs  tile_service.rs
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  setup.test.ts
frontend/src/components/: DriftTimelineSlider.tsx  GlobeRenderer.test.tsx  GlobeRenderer.tsx  LayerManager.test.tsx  LayerManager.tsx  LayerTimelineSlider.tsx  Layout.test.tsx  Layout.tsx  TimelineSlider.tsx  ViewControls.test.tsx  ViewControls.tsx
frontend/src/data/: constants.ts  continentalDrift.ts  mockLayers.ts  napoleonTrajectory.ts
frontend/src/hooks/: useArcballRotation.test.ts  useArcballRotation.ts  useLayerState.test.ts  useLayerState.ts  useZoom.test.ts  useZoom.ts
frontend/src/services/: MemoryManager.test.ts  MemoryManager.ts  TileLoader.test.ts  TileLoader.ts  TransitionEngine.test.ts  TransitionEngine.ts
(+10 files in other folders)
