[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"

# ORM
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
chrono = "0.4"
